# amore-energy-study

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
analysis/: _figure_watermark.py  audit_table.py  baseline_data.py  calibrate.py  comm_energy_fit.py  comm_projection.py  compute_energy.py  parse_traces.py  plot_crossover.py  plot_energy_per_round.py  plot_mode_comparison.py  plot_phase_breakdown.py  sleep_model.py  spread_check.py  stop_validation.py  variance_study.py  variance_summary.py  voltage_sensitivity.py
analysis/fair_comparison/: README.md  compute_fair.py
analysis/figures/: fig1_energy_vs_n.py  fig2_memory.py  fig3_time_vs_n.py  fig4_crossover.py  fig5_phase_breakdown.py  make_figures.py
analysis/fixtures/: synthetic_cells.py
analysis/results/: energy_real_20260605.json
analysis/tests/: test_backends.py  test_baseline_constants.py  test_comm_energy_fit.py  test_compute_energy.py  test_energy_real.py  test_fig4_crossover.py  test_parse_traces.py  (+2 more)
docs/: FINAL_RESULTS_20260529.md  FINAL_RESULTS_20260531.md  MODE_A_ENERGY_FINDING_20260528.md  PRD.md  README.md  SMOKE_STATUS_20260528.md  audit_table.md  comm_anchors.md  decisions.md  future_work.md  known_caveats.md  methodology.md
measurement/: audit_table.csv  backends.py  sanity_log.txt
report/: main.tex
scripts/: automated_checks.sh  flash_once_then_replicas.py  full_campaign.sh  full_regression.sh  implementation_validation.sh  integration_smoke.sh  make_figures.sh  measure_one_cell.py  mini_regression.sh  run_cell.py  sanity_check.sh  smoke_mock.sh  smoke_ppk2.sh
(+45 files in other folders)
